--- a/app/components/messages/messages.module.scss
+++ b/app/components/messages/messages.module.scss
@@ -5,3 +5,17 @@
     }
   }
 }
+
+.messageList {
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+  &::-webkit-scrollbar-track {
+    background-color: rgba(0, 0, 0, 0.05);
+    border-radius: 4px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: darkgrey;
+    border-radius: 4px;
+  }
+}
