--- a/app/components/videos/videos.module.scss
+++ b/app/components/videos/videos.module.scss
@@ -3,6 +3,9 @@
   color: white;
   bottom: 80px;
   left: 50%;
+  font-size: 1.6rem;
+  width: 100%;
+  padding: 0 20px;
   transform: translateX(-50%);
   text-shadow: 1px 1px 1px #fff;
 }
